Fix bug with hero image so it covers full width of screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,7 @@ ul li a:hover {
 /* Hero image and cover text */
 
 #hero-outer {
-    height: 300px;
+    height: 100vh;
     width: 100%;
     overflow: hidden;
 
@@ -79,9 +79,10 @@ ul li a:hover {
 }
 
 #hero-image {
-    height: 300px;
+    height: 50vh;
     width: 100%;
     background: url('../images/hero-image.jpg') no-repeat center center;
+    background-size: cover;
 
     /* Animates zoom effect on landing page */
     animation-name: hero-zoom;
@@ -106,8 +107,8 @@ ul li a:hover {
     text-transform: uppercase;
     letter-spacing: 3px;
 
-    width: 350px;
-    height: 350px;
+    width: 25vw;
+    height: 25vh;
 
     padding-top: 20px;
     padding-left: 10px;
@@ -119,6 +120,10 @@ ul li a:hover {
     right: 100px;
 
     position: absolute;
+}
+
+h2 {
+    text-align: center;
 }
 
 h3 {
